# elevated_ambitions

./: .gitignore  Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml  requirements.txt
backend/: __init__.py  logging_config.py
backend/agents/: job_description_graph.py  nodes.py
backend/data/: __init__.py  test_raw_job_listing.json
backend/database/: __init__.py  mongodb.py
backend/models/: __init__.py  job_description_models.py  job_description_workflow_state.py  jobs_search_models.py  resume_models.py
backend/notebooks/: Resume_Parser.ipynb  __init__.py  google_talent.ipynb  jobs_explorer.ipynb
backend/prompts/: job_description_processing.py
backend/tests/: test_extraction_graph.py  test_nodes.py
backend/utils/: job_search.py
backend/workflows/: elevate_job_descriptions.py  jobs_to_mongo.py  search_jobs_to_mongodb.py
docs/: main.md
notebooks/: Resume_Parser.ipynb  autogen_langchain_uniswap_ai_agent.ipynb  bullet_editor_dev.ipynb  resume_template.py  resume_texts.pkl  test_langsmith.ipynb  url_resume_dict.pkl
prompts/: main.prompt  question_generation.prompt  resume_extraction.prompt  synthetic_bullet_builder.prompt  synthetic_interview_responses.prompt
scripts/: elevate-jobs.sh  enter-container.sh  process_jobs_batch.py
src/: Home.py  Tools.py  resume_template.py
src/pages/: 1🗂️_Resume_Analyzer.py  Profile.py  Resume_Analyzer.py
templates/: profile_interview_template.json  resume_template.json  scale_profile_template.json
